etc/iptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun  8 11:33:27 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Mon Jun  8 11:33:27 2026
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun  8 11:33:27 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:f2b-sshd - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -j ts-input
-A INPUT -s 10.0.0.0/16 -p tcp -m multiport --dports 80,8080,8978 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,8080,8978 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j ts-forward
-A f2b-sshd -s 94.156.232.116/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 87.251.64.149/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.186/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.182/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 80.94.92.171/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 47.254.30.91/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.122.238/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.121.25/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.57.121.112/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 139.19.117.197/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.105.111.12/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
# Completed on Mon Jun  8 11:33:27 2026
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun  8 11:33:27 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ts-postrouting - [0:0]
-A POSTROUTING -j ts-postrouting
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Mon Jun  8 11:33:27 2026
